--- a/_posts/2019-08-13-1.md
+++ b/_posts/2019-08-13-1.md
@@ -4,7 +4,7 @@ title: '#1 Architektura vs Agile'
 date: 2019-08-13 00:00:00 +0300
 description: 
 img: 1.png
-tags: 
+tags: [ "agile", "redhat", "architektura", "waterfall" ] 
 spreaker: 22582604
 ---
 Odcinek poświęcony robieniu architektura w czasach Agile.  Czy można w ogóle robić dobrą architekturę, kiedy wszystko jest niby zwinne?
