--- a/_posts/2019-08-30-3.md
+++ b/_posts/2019-08-30-3.md
@@ -4,7 +4,7 @@ title: '#3 Kubernetes (chyba?) dla architektów'
 date: 2019-08-30 08:00:00 +0200
 description: 
 img: "03"
-tags: 
+tags: [ "redhat", "mikroserwisy", "kubernetes", "ibm" ] 
 spreaker: 22177745
 ---
 Mięso od 16:24, za bardzo się rozgadaliśmy na wstęp! ;-)
