--- a/_posts/2019-09-06-4.md
+++ b/_posts/2019-09-06-4.md
@@ -4,7 +4,7 @@ title: '#4 Technology Radar Review, część 1'
 date: 2019-09-06 08:00:00 +0200
 description: 
 img: "04"
-tags: 
+tags: [ "ios", "android", "technolologyradar", "lambda" ] 
 spreaker: 22177704
 ---
 Czym jest Technology Radar? Co to jest ThoughtWorks? Kto tam pracuje i czy go lubimy? Na te i inne pytania znajdziesz odpowiedź w tym odcinku.
