--- a/_posts/2019-09-20-6.md
+++ b/_posts/2019-09-20-6.md
@@ -4,7 +4,7 @@ title: '#6 Circuit breaker'
 date: 2019-09-20 08:00:00 +0200
 description: 
 img: "06"
-tags: 
+tags: [ "zalando", "techradar", "circuitbreaker", "lockin" ] 
 spreaker: 22177744
 ---
 Circuit breaker, czyli co ma wyłącznik prądowy do architektury!?
