--- a/_posts/2019-09-27-7.md
+++ b/_posts/2019-09-27-7.md
@@ -4,7 +4,7 @@ title: '#7 Azure Storage - Blob po raz pierwszy'
 date: 2019-09-27 08:00:00 +0200
 description: 
 img: "07"
-tags: 
+tags: [ "azure", "storage", "blob", "architektura" ] 
 spreaker: 22177702
 ---
 Azure Storage - Blob po raz pierwszy. Czemu po raz pierwszy? Miał być prosty odcinek o cały Azure Storage.
