--- a/_posts/2019-10-04-8.md
+++ b/_posts/2019-10-04-8.md
@@ -4,7 +4,7 @@ title: '#8 f**k-upy, nasze i innych'
 date: 2019-10-04 08:00:00 +0200
 description: 
 img: "08"
-tags: 
+tags: [ "stackoverflow", "ai", "fuckup", "appcaching" ] 
 spreaker: 22582601
 ---
 Odcinek anegdotyczny, czyli po prostu o tytułowych f**k-upch - naszych i innych osób.
