--- a/_posts/2019-10-11-9.md
+++ b/_posts/2019-10-11-9.md
@@ -4,7 +4,7 @@ title: '#9 Azure Storage - Table'
 date: 2019-10-11 08:00:00 +0200
 description: 
 img: "09"
-tags: 
+tags: [ "azure", "storage", "table", "nosql" ] 
 spreaker: 22177743
 ---
 Azure Storage – tym razem Table. NoSql? key-value? wide column store? W dzisiejszym odcinku rozmawiamy o jednej z najstarszych i najciekawszych baz danych w Azure! I w sumie najtańszej ;-)
