--- a/_posts/2019-10-18-10.md
+++ b/_posts/2019-10-18-10.md
@@ -4,7 +4,7 @@ title: '#10 Service Mesh dla architektów i CTO'
 date: 2019-10-18 08:00:00 +0200
 description: 
 img: "10"
-tags: 
+tags: [ "openai", "ai", "stackoverflow", "twitter" ] 
 spreaker: 22582600
 ---
 Service Mesh hype? Czy coś potrzebnego? Dziś rozmawiamy o tym, co dają Service Meshe.
