--- a/_posts/2019-10-25-11.md
+++ b/_posts/2019-10-25-11.md
@@ -4,7 +4,7 @@ title: '#11 Azure Storage Queue i ostatni raz ogólnie o Azure Storage'
 date: 2019-10-25 08:00:00 +0200
 description: 
 img: "11"
-tags: 
+tags: [ "amazon", "eks", "azure", "aws" ] 
 spreaker: 22582599
 ---
 Azure Storage Queue i ostatni raz ogólnie o Azure Storage.
