--- a/_posts/2019-11-01-12.md
+++ b/_posts/2019-11-01-12.md
@@ -4,7 +4,7 @@ title: '#12 Bazy danych - key-value'
 date: 2019-11-01 08:00:00 +0200
 description: 
 img: "12"
-tags: 
+tags: [ "bazy", "dane", "key", "value" ] 
 spreaker: 22177739
 ---
 Zacznijmy serię o typach baz danych! Na pierwszy ogień key-value.
