--- a/_posts/2019-11-08-13.md
+++ b/_posts/2019-11-08-13.md
@@ -4,7 +4,7 @@ title: '#13 ADR, czyli Architecture Decision Record'
 date: 2019-11-01 08:00:00 +0200
 description: 
 img: "13"
-tags: 
+tags: [ "dokumentacja", "adr", "architektura", "cloud" ] 
 spreaker: 22582598
 ---
 13 odcinek, więc warto zająć się dokumentacją. Dokumentacja większość osób boli, szczególnie dokumentowanie przyczyn podjęcia decyzji. ADR, czyli Architecture Decision Record to metoda, która jest prosta, dobra i, mimo że formalna (częściowo ;-)) to bardzo wygodna w użyciu!
