--- a/_posts/2019-12-13-16.md
+++ b/_posts/2019-12-13-16.md
@@ -4,7 +4,7 @@ title: '#16 Książki'
 date: 2019-12-14 08:00:00 +0200
 description: 
 img: "16"
-tags: 
+tags: [ "gates", "twitter", "unix", "twitter" ] 
 spreaker: 22582596
 ---
 Zestawienie 6 książek, które czytaliśmy ostatnio i według nas warto przeczytać.
