--- a/_posts/2019-12-20-17.md
+++ b/_posts/2019-12-20-17.md
@@ -4,7 +4,7 @@ title: '#17 Bazy danych - bazy grafowe'
 date: 2019-12-20 08:00:00 +0200
 description: 
 img: "17"
-tags: 
+tags: [ "bazy", "grafowe", "stackoverflow", "twitter" ]
 spreaker: 22177700
 ---
 Odcinek o chyba mało popularnym typie baz — bazach grafowych.
