--- a/_posts/2020-01-31-21.md
+++ b/_posts/2020-01-31-21.md
@@ -4,7 +4,7 @@ title: '#21 Observability - Metryki'
 date: 2020-01-31 08:00:00 +0200
 description: Metryki, czyli miejsce w observability do proaktywnego monitoringu oraz alertów
 img: "21"
-tags: 
+tags: [ "influxdb", "prometheus", "stackoverflow", "twitter" ] 
 spreaker: 22582755
 ---
 Kolejnym z filarów observability są metryki, na których skupimy się w tym odcinku. Jest to najbardziej potrzebny element do proaktywnego monitoringu i baza do tworzenia ulubionych przez wszystkich alertów ;-)
