--- a/_posts/2020-02-14-22.md
+++ b/_posts/2020-02-14-22.md
@@ -4,7 +4,7 @@ title: '#22 Observability - Distributed tracing'
 date: 2020-02-14 08:00:00 +0200
 description: Distributed tracing, czyli jeden z trzech filar observability
 img: "22"
-tags:
+tags: [ "observability", "zipkin", "jaeger", "tracing" ]
 spreaker: 22745792
 ---
 Distributed tracing, czyli ostatni filar observability. Niektórzy uważają to za crème de la crème całego **observability**.
