--- a/_posts/2020-02-28-23.md
+++ b/_posts/2020-02-28-23.md
@@ -4,7 +4,7 @@ title: '#23 Docker A.D. 2020'
 date: 2020-02-28 08:00:00 +0200
 description: Kontenery... kontenery... kontenery..., czyli co słychać w Docker na 2020!
 img: "23"
-tags:
+tags: [ "kata", "docker", "vmware", "firecracker" ]
 spreaker: 23277203
 ---
 Kontenery... kontenery... kontenery..., czyli co słychać w Docker na 2020!
