--- a/_posts/2020-03-13-24.md
+++ b/_posts/2020-03-13-24.md
@@ -2,9 +2,9 @@
 layout: post
 title: '#24 Dokumentacja...'
 date: 2020-03-13 08:00:00 +0200
-description: Jeden z najnudniejszych, najmniej seksownych, najczęściej odsuwanych w czasie tematów w projektach? Dokumetacja... 
+description: Jeden z najnudniejszych, najmniej seksownych, najczęściej odsuwanych w czasie tematów w projektach? Dokumentacja... 
 img: "24"
-tags:
+tags: [ "api", "cloudflare", "dokumentacja", "mermaid" ]
 spreaker: 23826697
 ---
 Jeden z najnudniejszych, najmniej seksownych, najczęściej odsuwanych w czasie tematów w projektach? Dokumentacja! W tym odcinku rozmawiamy właśnie o niej…
