--- a/_posts/2020-04-10-26.md
+++ b/_posts/2020-04-10-26.md
@@ -4,7 +4,7 @@ title: '#26 OAuth 2, OIDC i JWT... z Markiem Grabarzem'
 date: 2020-04-10 13:30:00 +0200
 description: Najpopularniejszym sposobem autoryzacji w nowych projektach bez wątpliwości jest OAuth. W założenia OAuth i poboczne tematy zagłębiamy się razem z naszym gościem Markiem Grabarzem.
 img: "26"
-tags:
+tags: [ "oauth", "jwt", "dns", "pkce" ]
 spreaker: 25225760
 ---
 Najpopularniejszym sposobem autoryzacji w nowych projektach bez wątpliwości jest OAuth. W założenia OAuth i poboczne tematy zagłębiamy się razem z naszym gościem Markiem Grabarzem.
