--- a/_posts/2020-05-08-27.md
+++ b/_posts/2020-05-08-27.md
@@ -4,7 +4,7 @@ title: '#27 Patologie Mikroserwisów - Repozytoria'
 date: 2020-05-08 12:00:00 +0200
 description: ...luźne gadki nad elementem, przy którym w sumie mało co się dyskutuje, czyli repozytoria!
 img: "27"
-tags:
+tags: [ "mikroserwisy", "technologyradar", "git", "repo" ]
 spreaker: 26902116
 ---
 Zaczynamy serię o mikroserwisach… patologicznych mikroserwisach albo… …patologii w mikroserwisach? Na start luźne gadki nad elementem, przy którym w sumie mało co się dyskutuje, czyli repozytoria!
