--- a/_posts/2020-05-22-28.md
+++ b/_posts/2020-05-22-28.md
@@ -4,7 +4,7 @@ title: '#28 Patologie Mikroserwisów - Platforma'
 date: 2020-05-22 10:00:00 +0200
 description: ...luźną gadka na temat miejsca do odpalania mikroserwisów... Czy naprawdę musi to być Kubernetes⁉️
 img: "28"
-tags:
+tags: [ "kubernetes", "mikroserwisy", "platforma", "observability" ]
 spreaker: 28035993
 ---
 Kolejny odcinek o mikroserwisach albo …patologii w mikroserwisach? Teraz luźne gadki nad elementem o nazwie platforma, czyli tam, gdzie prawie wszyscy pchają Kubernetes… Czy tak musi być? Niekoniecznie!
