--- a/_posts/2020-06-05-29.md
+++ b/_posts/2020-06-05-29.md
@@ -4,7 +4,7 @@ title: '#29 Technology Radar vol. 22 Review'
 date: 2020-06-05 10:00:00 +0200
 description: ...robimy przegląd Technology Radar vol. 22. ... Czy naprawdę musi to być znowu tyle Kubernetes⁉️
 img: "29"
-tags:
+tags: [ "technologyradar", "deno", "envoy", "kubernetes" ]
 spreaker: 29549689
 ---
 Robimy przegląd Technology Radar vol. 22. 
