--- a/_posts/2020-09-25-31.md
+++ b/_posts/2020-09-25-31.md
@@ -4,7 +4,7 @@ title: '#31 Patologie Mikroserwisów - Czy rozmiar ma znaczenie?'
 date: 2020-09-25 09:17:00 +0200
 description: ...czyli temat z dupy
 img: "31"
-tags:
+tags: [ "openai", "api", "gpt3", "it" ]
 spreaker: 41113331
 ---
 Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a tym razem najbardziej kontrowersyjny temat — Czy rozmiar ma znaczenie?
