--- a/_posts/2020-11-20-34.md
+++ b/_posts/2020-11-20-34.md
@@ -4,7 +4,7 @@ title: '#34 Technology Radar vol. 23 - Review'
 date: 2020-11-20 14:30:00 +0100
 description: ...ale nudy w językach ;-)
 img: "34"
-tags:
+tags: [ "jid", "mit", "technologyradar", "json" ]
 spreaker: 42074383
 ---
 Robimy przegląd kolejnego już Technology Radar, tym razem vol. 23. 
