--- a/_posts/2021-01-01-35.md
+++ b/_posts/2021-01-01-35.md
@@ -4,7 +4,7 @@ title: '#35 Luźno na pytania z UserVoice'
 date: 2021-01-01 12:00:00 +0100
 description: ...i wyjaśnienie o co chodziło z tosterem ;-)
 img: "35"
-tags:
+tags: [ "uservoice", "azure", "sharding", "warehousing" ]
 spreaker: 42746812
 ---
 Noworoczny odcinek, gdzie na luzie przechodzimy przez pytania z naszego [UserVoice](https://github.com/patoarchitekci/uservoice/issues).
