--- a/_posts/2021-02-26-36.md
+++ b/_posts/2021-02-26-36.md
@@ -4,7 +4,7 @@ title: '#36 O analityce z Pawłem Potasińskim'
 date: 2021-02-26 00:00:00 +0100
 description: ...przechodzimy przez wiele różnych trendów i zagadnień
 img: "36"
-tags:
+tags: [ "data", "science", "apache", "sql" ]
 spreaker: 43641899
 ---
 Tym razem rozmawiamy z [Pawłem Potasińskim](https://www.linkedin.com/in/pawelpotasinski/) o analityce. Przewijają się różne zagadnienia - od klasycznych hurtowni po uczenie maszynowe, kompetencje zespołów data science, co powinni wiedzieć programiści na temat analityki i czego ludzi od danych mogą się nauczyć od programistów.
