--- a/_posts/2022-08-12-37.md
+++ b/_posts/2022-08-12-37.md
@@ -4,7 +4,7 @@ title: '37 Technology Radar vol. 26 - Review'
 date: 2022-08-12 08:00:00 +0200
 description: 
 img: "37"
-tags: 
+tags: [ "protopia", "technologyradar", "platforma", "it" ] 
 spreaker: 50821849
 ---
 Good to be back! Czy wiesz co pachnie pleśnią!? Zaczynamy od kolejnego już przeglądu Technology Radar, tym razem vol. 26.
