--- a/_posts/2022-08-19-38.md
+++ b/_posts/2022-08-19-38.md
@@ -4,7 +4,7 @@ title: '#38 Patoarchitekci Short #1'
 date: 2022-08-19 08:00:00 +0200
 description: 
 img: "38"
-tags: 
+tags: [ "short", "airbnb", "rabbitmq", "mikroserwisy" ] 
 spreaker: 50951404
 ---
 Patoarchitekci w wersji SHORT! Czy musimy na nowo wynajdywać koło? Przypomnij sobie, jak zadbać o stabilność!
