--- a/_posts/2022-08-26-39.md
+++ b/_posts/2022-08-26-39.md
@@ -4,7 +4,7 @@ title: '#39 Patoarchitekci Short #2'
 date: 2022-08-26 08:00:00 +0200
 description: 
 img: "39"
-tags: 
+tags: [ "kubernetes", "cloud", "chmura", "short" ] 
 spreaker: 51013282
 ---
 Kolejny short! Historia kołem się toczy. Sprawdź, kiedy on-premises wygra z cloudem i za co być może klienci będą płacić w 2025 roku!
