--- a/_posts/2022-09-02-40.md
+++ b/_posts/2022-09-02-40.md
@@ -4,7 +4,7 @@ title: '#40 Platformy i platform team'
 date: 2022-09-02 08:00:00 +0200
 description: 
 img: "40"
-tags: 
+tags: [ "platforma", "team", "software", "it" ] 
 spreaker: 51102509
 ---
 Własne wewnętrzne platformy to coraz śmielej pojawiający się trend. Sprawdź 9 istotnych kroków, dzięki którym z sukcesem utrzymasz platformę i platform team-y!
