--- a/_posts/2022-09-16-42.md
+++ b/_posts/2022-09-16-42.md
@@ -4,7 +4,7 @@ title: '#42 Patoarchitekci Short #4'
 date: 2022-09-16 08:00:00 +0200
 description: 
 img: "42"
-tags: 
+tags: [ "midjourney", "ai", "dalle", "datamesh" ] 
 spreaker: 51256142
 ---
 Patoarchitekci short po raz kolejny zadziwiają swoim znaleziskiem! Czy komputery naprawdę zaczęły czytać ludziom w myślach?
