--- a/_posts/2022-09-23-43.md
+++ b/_posts/2022-09-23-43.md
@@ -4,7 +4,7 @@ title: '#43 Patoarchitekci Short #5'
 date: 2022-09-23 08:00:00 +0200
 description: 
 img: "43"
-tags: 
+tags: [ "openai", "ai", "stackoverflow", "twitter" ] 
 spreaker: 51347969
 ---
 Patoarchitekci short po raz kolejny zadziwiają swoim znaleziskiem! Czy komputery naprawdę zaczęły czytać ludziom w myślach?
