--- a/_posts/2022-09-30-44.md
+++ b/_posts/2022-09-30-44.md
@@ -4,7 +4,7 @@ title: '#44 Patoarchitekci Short #6'
 date: 2022-09-30 08:00:00 +0200
 description: 
 img: "44"
-tags: 
+tags: [ "cloudflare", "realtime", "gateway", "api" ] 
 spreaker: 51420842
 ---
 Cloudflare po raz kolejny na celowniku Patoarchitektów. Na co tym razem warto zwrócić uwagę?
