--- a/_posts/2022-10-07-45.md
+++ b/_posts/2022-10-07-45.md
@@ -4,7 +4,7 @@ title: '#45 Patoarchitekci Short #7'
 date: 2022-10-07 08:00:00 +0200
 description: 
 img: "45"
-tags: 
+tags: [ "opensource", "atlas", "akka", "azure" ] 
 spreaker: 51488728
 ---
 Kolejna organizacja zmienia licencje dla open source'u. Patoarchitekci wyjaśniają, czy w takiej sytuacji lepiej przenieść usługi do kogoś innego, czy może… zbudować wszystko od nowa. Posłuchaj i sprawdź!
