--- a/_posts/2022-10-14-46.md
+++ b/_posts/2022-10-14-46.md
@@ -4,7 +4,7 @@ title: '#46 Patoarchitekci Short #8'
 date: 2022-10-14 08:00:00 +0200
 description: 
 img: "46"
-tags: 
+tags: [ "cloudflare", "framework", "pattern", "database" ] 
 spreaker: 51563912
 ---
 Czy Cloudflare podsłuchuje Patoarchitektów? A może mamy zdolność przewidywania przyszłości?
