--- a/_posts/2022-10-21-47.md
+++ b/_posts/2022-10-21-47.md
@@ -4,7 +4,7 @@ title: '#47 2022 Accelerate State of DevOps Report'
 date: 2022-10-21 08:00:00 +0200
 description: 
 img: "47"
-tags: 
+tags: [ "ama", "2022", "meetup", "devops" ] 
 spreaker: 51636681
 ---
 2022 Accelerate State of DevOps Report – Patoarchitekci sprawdzają, w jaką stronę może się zmienić raport, który rok temu był czysto techniczny. Posłuchaj i dowiedz się, jaki jest teraz.
