--- a/_posts/2022-10-28-48.md
+++ b/_posts/2022-10-28-48.md
@@ -4,7 +4,7 @@ title: '#48 Patoarchitekci Short #9'
 date: 2022-10-28 08:00:00 +0200
 description: 
 img: "48"
-tags: 
+tags: [ "net", "grafana", "cloud", "basecamp" ] 
 spreaker: 51702996
 ---
 Patoarchitekci odkrywają, co łączy Basecamp, Dropbox i Netflixa. Posłuchaj i dowiedz się, dlaczego niektórzy rezygnują z rozwiązań cloudowych.
