--- a/_posts/2022-11-04-49.md
+++ b/_posts/2022-11-04-49.md
@@ -4,7 +4,7 @@ title: '#49 Patoarchitekci Short #10'
 date: 2022-11-04 08:00:00 +0200
 description: 
 img: "49"
-tags: 
+tags: [ "kafka", "aws", "redpanda", "zookeeper" ] 
 spreaker: 51778363
 ---
 
