--- a/_posts/2022-11-18-51.md
+++ b/_posts/2022-11-18-51.md
@@ -4,7 +4,7 @@ title: '#51 Github Universe 2022'
 date: 2022-11-18 08:00:00 +0200
 description: 
 img: "51"
-tags: 
+tags: [ "github", "openai", "ai", "github" ] 
 spreaker: 51925800
 ---
 Github po raz kolejny zdominował Patoarchitektów! Zobacz, czym ich zaskoczył w tym tygodniu.
