--- a/_posts/2022-11-25-52.md
+++ b/_posts/2022-11-25-52.md
@@ -4,7 +4,7 @@ title: '#52 Patoarchitekci Short #11'
 date: 2022-11-25 08:00:00 +0200
 description: 
 img: "52"
-tags: 
+tags: [ "architektura", "kontenery", "dotnet", "twitter" ] 
 spreaker: 52003489
 ---
 
