--- a/_posts/2022-12-16-55.md
+++ b/_posts/2022-12-16-55.md
@@ -4,7 +4,7 @@ title: '#55 Patoarchitekci Short #14'
 date: 2022-12-16 08:00:00 +0200
 description: 
 img: "55"
-tags: []
+tags: [ "tailwind", "cloudflare", "js", "keda" ]
 spreaker: 52193347
 ---
 
