--- a/_posts/2019-08-23-2.md
+++ b/_posts/2019-08-23-2.md
@@ -4,7 +4,7 @@ title: '#2 Serverless'
 date: 2019-08-23 08:00:00 +0200
 description: 
 img: "02"
-tags: 
+tags: [ "serverless", "mariadb", "myrocks", "mysql" ] 
 spreaker: 22582603
 ---
 W tym odcinku nasza luźna rozmowa o tym jak jest z Serverless z różnych stron – tych dobrych jak i tych gorszych!
