--- a/_posts/2019-09-13-5.md
+++ b/_posts/2019-09-13-5.md
@@ -4,7 +4,7 @@ title: '#5 Technology Radar Review, część 2'
 date: 2019-09-06 08:00:00 +0200
 description: 
 img: "05"
-tags: 
+tags: [ "technologyradar", "architektura", "wardleymapping", "tech" ] 
 spreaker: 22582602
 ---
 Cześć druga o Technology Radar oraz trochę o roli architekta. Jeśli nie słuchałeś poprzedniego odcinka, to warto to zrobić.
