--- a/_posts/2019-11-15-14.md
+++ b/_posts/2019-11-15-14.md
@@ -4,7 +4,7 @@ title: '#14 Trochę o narzędziach dla architekta'
 date: 2019-11-15 01:00:00 +0200
 description: 
 img: "14"
-tags: 
+tags: [ "architektura", "mindmap", "pareto", "swot", "moscow", "c4" ] 
 spreaker: 22582597
 ---
 Dziś trochę o narzędziach dla architekta. Będzie o MindMap, Event Storming, Eisenhower box, Pareto, MoSCoW, SWOT, C4!
