--- a/_posts/2020-01-03-18.md
+++ b/_posts/2020-01-03-18.md
@@ -4,7 +4,7 @@ title: '#18 API Gateway'
 date: 2020-01-03 08:00:00 +0200
 description: 
 img: "18"
-tags: 
+tags: [ "api", "gateway", "ambassador", "azure" ] 
 spreaker: 22582595
 ---
 Tym razem odcinek o API Gateway. Odpowiadamy na pytanie, czym jest API Gateway i kiedy zacząć stosować.
