--- a/_posts/2020-01-11-19.md
+++ b/_posts/2020-01-11-19.md
@@ -4,7 +4,7 @@ title: '#19 API Gateway - BFF, API Aggregation, GraphQL'
 date: 2020-01-11 08:00:00 +0200
 description: 
 img: "19"
-tags: 
+tags: [ "kubernetes", "api", "gateway", "bff" ] 
 spreaker: 22177736
 ---
 Kolejny odcinek z API Gateway. Tym razem poruszamy jedno z zastosowań, jakim jest BFF, API Aggregation oraz jak wypada przy tym GraphQL.
