--- a/_posts/2020-01-17-20.md
+++ b/_posts/2020-01-17-20.md
@@ -4,7 +4,7 @@ title: '#20 Observability - Logi'
 date: 2020-01-17 08:00:00 +0200
 description: 
 img: "20"
-tags: 
+tags: [ "uservoice", "observability", "log", "twitter" ] 
 spreaker: 22177734
 ---
 Od jakiegoś czasu Observability staje się widocznym trendem. W tym odcinku rozmawiamy o jednym z filarów Observability – logach!
