--- a/_posts/2020-03-27-25.md
+++ b/_posts/2020-03-27-25.md
@@ -4,7 +4,7 @@ title: '#25 Service Discovery'
 date: 2020-03-27 00:30:00 +0200
 description: Service Discovery — czym jest automatyczne wykrywanie usług i z czego się składa? Czy w czasach PaaS, Serveless i Kubernetes ma sens?
 img: "25"
-tags:
+tags: [ "service", "discovery", "paas", "spring" ]
 spreaker: 24401602
 ---
 Service Discovery — czym jest automatyczne wykrywanie usług i z czego się składa? Czy w czasach PaaS, Serveless i Kubernetes ma sens?
@@ -18,7 +18,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [STOP!! You don’t need Microservices](https://medium.com/swlh/stop-you-dont-need-microservices-dc732d70b3e0)
 - [The Difference Between API Gateways and Service Mesh](https://www.cncf.io/blog/2020/03/06/the-difference-between-api-gateways-and-service-mesh/)
 - [etcd](https://etcd.io/)
-- [Sping - Service Registration and Discovery](https://spring.io/guides/gs/service-registration-and-discovery/)
+- [Spring - Service Registration and Discovery](https://spring.io/guides/gs/service-registration-and-discovery/)
 - [eureka](https://github.com/Netflix/eureka)
 - [Consul by HashiCorp](https://www.consul.io/)
 - [Apache ZooKeeper](https://zookeeper.apache.org/)\
