--- a/_posts/2020-07-24-30.md
+++ b/_posts/2020-07-24-30.md
@@ -4,7 +4,7 @@ title: '#30 Patologie Mikroserwisów - Kontrakty i wersjonowanie'
 date: 2020-07-24 09:30:00 +0200
 description: ...omijane i nielubiane kontrakty i wersjonowanie
 img: "30"
-tags:
+tags: [ "mikroserwisy", "patologie", "slo", "metricsdb" ]
 spreaker: 39932034
 ---
 Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a może o tym, co i tak omijamy? Tym razem omijane i nielubiane kontrakty i wersjonowanie. 
