--- a/_posts/2020-10-16-32.md
+++ b/_posts/2020-10-16-32.md
@@ -4,7 +4,7 @@ title: '#32 Patologie Mikroserwisów - Dane!!!'
 date: 2020-10-16 10:00:00 +0200
 description: ...czyli o bardzo ważnej oczywistości!
 img: "32"
-tags:
+tags: [ "esxi", "docker", "konferencja", "poznajdocker" ]
 spreaker: 41489845
 ---
 Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach, a tym razem o danych... czyli o bardzo ważnej oczywistości!
