--- a/_posts/2020-10-30-33.md
+++ b/_posts/2020-10-30-33.md
@@ -4,7 +4,7 @@ title: '#33 Patologie Mikroserwisów - Podsumowanie'
 date: 2020-10-30 10:00:00 +0200
 description: ...czyli zebranie co o mikroserwisach nagraliśmy!
 img: "33"
-tags:
+tags: [ "agile", "observability", "architektura", "mlops" ]
 spreaker: 41714292
 ---
 Podsumowujemy luźno to, co nagraliśmy o mikroserwisach i przygotujemy się do kolejnych tematów ;-)
