--- a/_posts/2022-09-09-41.md
+++ b/_posts/2022-09-09-41.md
@@ -4,7 +4,7 @@ title: '#41 Patoarchitekci Short #3'
 date: 2022-09-09 08:00:00 +0200
 description: 
 img: "41"
-tags: 
+tags: [ "observability", "it", "short", "cloud" ] 
 spreaker: 51170256
 ---
 Patorachitekci short! Sprawdź, co słychać z observability, czy coś kwantowego w IT się pojawia coraz bardziej oraz ukochane przez wszystkich koszty chmurowe!
