--- a/_posts/2022-11-11-50.md
+++ b/_posts/2022-11-11-50.md
@@ -4,7 +4,7 @@ title: '#50 Urodzinowy odcinek z meetup!'
 date: 2022-11-04 08:00:00 +0200
 description: 
 img: "50"
-tags: 
+tags: [ "ama", "github", "cloud", "meetup" ] 
 spreaker: 51857459
 ---
 Tym razem odcinek w formacie Ask me Anything nagrany w trakcie urodzinowego meetupu!
